me pelan la verga

--- a/Templates/Base/base.html
+++ b/Templates/Base/base.html
@@ -35,6 +35,12 @@
 				<li><a href="/estilos">Estilos</a></li>
 				<li><a href="/mensajesenv">Mensaje Enviados</a></li>
 				<li><a href="/mensajeform">Formulario Generico</a></li>
+				<li class="dropdown">
+					<a class=""href="" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						 <li><a href="/saldoxMensual">Saldo por periodo mensual </a></li>
+					</ul>
+				</li>
 			</ul>
 
 		</div>
